@@ -1,3 +1,7 @@
+2001-05-14  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/report/category-barchart.scm: fix bug.
+
 2001-05-14  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/druid-qif-import.c: fix bug
